--- a/.github/workflows/owasp-zap-scan.yml
+++ b/.github/workflows/owasp-zap-scan.yml
@@ -15,5 +15,13 @@ jobs:
         uses: zaproxy/action-baseline@v0.12.0
         with:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://www.zaproxy.org'
+          target: 'https://testphp.vulnweb.com'
           cmd_options: '-a'
+      
+      - name: Create Issue
+        if: failure()  # Only try to create an issue if the scan fails
+        uses: peter-evans/create-issue-from-file@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: "OWASP ZAP Scan Results"
+          content-filepath: ./zap_report.md  # Path to your scan report
