--- a/.github/workflows/owasp-zap-scan.yml
+++ b/.github/workflows/owasp-zap-scan.yml
@@ -15,7 +15,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.12.0
         with:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://testphp.vulnweb.com'
+          target: 'https://www.zaproxy.org'
           cmd_options: '-a'
       
       - name: Create Issue
