--- a/.github/workflows/owasp-zap-scan.yml
+++ b/.github/workflows/owasp-zap-scan.yml
@@ -14,8 +14,8 @@ jobs:
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.12.0
         with:
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://www.zaproxy.org'
+          docker_name: ghcr.io/zaproxy/zaproxy:stable zap-baseline.py
+          target: 'https://www.example.com'
           cmd_options: '-a'
       
       - name: Create Issue
