--- a/.github/workflows/owasp-zap-scan.yml
+++ b/.github/workflows/owasp-zap-scan.yml
@@ -1,27 +1,20 @@
-name: OWASP ZAP Integration with Github Actions
+name: OWASP ZAP Integration with GitHub Actions
 
 on: [push]
 
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
-    name: Scan the webapplication
+    name: Scan the web applications
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
-          ref: main
+          ref: master
       - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.12.0
+        uses: zaproxy/action-baseline@v0.6.1
         with:
-          docker_name: ghcr.io/zaproxy/zaproxy:stable zap-baseline.py
-          target: 'https://www.example.com'
+          docker_name: 'owasp/zap2docker-stable'
+          target: 'http://testphp.vulnweb.com/'
+          rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
-      
-      - name: Create Issue
-        if: failure()  # Only try to create an issue if the scan fails
-        uses: peter-evans/create-issue-from-file@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          title: "OWASP ZAP Scan Results"
-          content-filepath: ./zap_report.md  # Path to your scan report
