--- a/.github/workflows/owasp-zap-scan.yml
+++ b/.github/workflows/owasp-zap-scan.yml
@@ -1,18 +1,18 @@
-name: OWASP ZAP Integration with GitHub Actions
+name: OWASP ZAP Integration with Github Actions
 
 on: [push]
 
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
-    name: Scan the web applications
+    name: Scan the web application
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           ref: main
       - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.6.1
+        uses: zaproxy/action-baseline@v0.3.0
         with:
           docker_name: 'owasp/zap2docker-stable'
           target: 'http://testphp.vulnweb.com/'
