--- a/.github/workflows/owasp-zap-scan.yml
+++ b/.github/workflows/owasp-zap-scan.yml
@@ -11,10 +11,25 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: main
-      - name: ZAP Scan
+          
+      - name: Run ZAP Baseline Scan using GitHub Action
         uses: zaproxy/action-baseline@v0.3.0
         with:
           docker_name: 'owasp/zap2docker-stable:2.13.0'
           target: 'http://testphp.vulnweb.com/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
+
+      - name: Run ZAP Baseline Scan using Docker Command
+        run: |
+          docker run -t ghcr.io/zaproxy/zaproxy:stable zap-baseline.py -t https://www.example.com -J report_json.json -w report_md.md -r report_html.html
+        working-directory: ${{ github.workspace }}
+
+      - name: Upload ZAP Reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: zap-reports
+          path: |
+            report_json.json
+            report_md.md
+            report_html.html
