--- a/.github/workflows/owasp-zap-scan.yml
+++ b/.github/workflows/owasp-zap-scan.yml
@@ -5,31 +5,15 @@ on: [push]
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
-    name: Scan the web application
+    name: Scan the webapplication
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: main
-          
-      - name: Run ZAP Baseline Scan using GitHub Action
-        uses: zaproxy/action-baseline@v0.3.0
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.12.0
         with:
-          docker_name: 'owasp/zap2docker-stable:2.13.0'
+          docker_name: 'owasp/zap2docker-stable'
           target: 'http://testphp.vulnweb.com/'
-          rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
-
-      - name: Run ZAP Baseline Scan using Docker Command
-        run: |
-          docker run -t ghcr.io/zaproxy/zaproxy:stable zap-baseline.py -t https://www.example.com -J report_json.json -w report_md.md -r report_html.html
-        working-directory: ${{ github.workspace }}
-
-      - name: Upload ZAP Reports
-        uses: actions/upload-artifact@v3
-        with:
-          name: zap-reports
-          path: |
-            report_json.json
-            report_md.md
-            report_html.html
